gl51-master/src/test/deca/context/invalid/testObject_rule1_3.deca
// Description
//Identificateur de super class non déclaré

class A extends B {
    // B non déclaré
}
//Passed

